--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title Tag (SEO) -->
-  <title>TechEdilite | Affordable Software Development in Hosur, Tamil Nadu | BuildPulse & UnitPulse</title>
+ <title>TechEdilite | Crafting Tomorrow with Technology and Ingenuity</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description"
@@ -380,7 +380,7 @@
 
 <body class="bg-gray-100 text-gray-800" style="font-family: 'Exo', sans-serif; font-size: 15px; color: #003db6;">
 
-  <div id="google_translate_element" class="google-translate"></div>
+  <!-- <div id="google_translate_element" class="google-translate"></div> -->
 
   <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 sticky top-0 z-50">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3">
