--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="TechEdilite - Leading software development company in Hosur, Tamil Nadu, India. Creators of BuildPulse construction app & UnitPulse inventory system. Cheap, reliable digital solutions for businesses. Contact: +91 96777 45956" />
+    content="TechEdilite - Leading software development company. Creators of BuildPulse construction app & UnitPulse inventory system. Cheap, reliable digital solutions for businesses. Contact: +91 96777 45956" />
   <meta name="keywords"
-    content="TechEdilite, Tech Edilite, software development Hosur, Tamil Nadu software company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development Hosur, construction management software, inventory management system, custom software Tamil Nadu, IT consulting Hosur, budget software solutions" />
+    content="TechEdilite, Tech Edilite, software development company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development Hosur, construction management software, inventory management system, custom software Tamil Nadu, IT consulting Hosur, budget software solutions" />
   <meta name="author" content="TechEdilite">
   <meta name="geo.region" content="IN-TN" />
-  <meta name="geo.placename" content="Hosur, Tamil Nadu, India" />
+  <!-- <meta name="geo.placename" content="Hosur, Tamil Nadu, India" /> -->
   <meta name="geo.position" content="12.1264;77.8267" />
   <meta name="ICBM" content="12.1264, 77.8267" />
 
   <!-- Open Graph Meta Tags for Social Media Sharing -->
-  <meta property="og:title" content="TechEdilite | Software Development Company Hosur, Tamil Nadu" />
+  <meta property="og:title" content="TechEdilite | Software Development Company" />
   <meta property="og:description"
-    content="TechEdilite provides affordable and reliable digital solutions in Hosur, Tamil Nadu. Featuring BuildPulse construction management and UnitPulse inventory apps. Call +91 96777 45956" />
+    content="TechEdilite provides affordable and reliable digital solutions. Featuring BuildPulse construction management and UnitPulse inventory apps. Call +91 96777 45956" />
   <meta property="og:image" content="./favTE.png" />
   <meta property="og:url" content="https://www.techedilite.com" />
   <meta property="og:type" content="website" />
@@ -33,13 +33,13 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="TechEdilite | Affordable Software Solutions Hosur" />
   <meta name="twitter:description"
-    content="Software development company in Hosur, Tamil Nadu. BuildPulse & UnitPulse apps. Reliable & budget-friendly. +91 96777 45956" />
+    content="Software development company in . BuildPulse & UnitPulse apps. Reliable & budget-friendly. +91 96777 45956" />
   <meta name="twitter:image" content="./favTE.png" />
 
   <!-- Contact & Business Information -->
   <meta name="contact" content="contact@techedilite.co" />
   <meta name="phone" content="+91 96777 45956" />
-  <meta name="address" content="Hosur, Tamil Nadu, India" />
+  <meta name="address" content=", India" />
 
   <!-- Local Business Schema Markup -->
   <script type="application/ld+json">
@@ -48,7 +48,7 @@
  "@type": "SoftwareApplication",
  "name": "TechEdilite",
  "alternateName": "Tech Edilite",
- "description": "Affordable and reliable software development company in Hosur, Tamil Nadu, India. Creators of BuildPulse construction management app and UnitPulse inventory management system.",
+ "description": "Affordable and reliable software development company Creators of BuildPulse construction management app and UnitPulse inventory management system.",
  "url": "https://www.techedilite.com",
  "applicationCategory": "BusinessApplication",
  "operatingSystem": "Web, iOS, Android",
