--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="./favTE.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.techedilite.co/favTE.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.techedilite.co/favTE.png">
+<link rel="shortcut icon" href="https://www.techedilite.co/favTE.png">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title Tag (SEO) -->
  <title>TechEdilite | Crafting Tomorrow with Technology | BuildPulse & UnitPulse</title>
