--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description"
     content="TechEdilite - Leading software development company. Creators of BuildPulse construction app & UnitPulse inventory system. Cheap, reliable digital solutions for businesses. Contact: +91 96777 45956" />
   <meta name="keywords"
-    content="TechEdilite, Tech Edilite, software development company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development Hosur, construction management software, inventory management system, custom software Tamil Nadu, IT consulting Hosur, budget software solutions" />
+    content="TechEdilite, Tech Edilite, software development company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development, construction management software, inventory management system, custom software Tamil Nadu, IT consulting, budget software solutions" />
   <meta name="author" content="TechEdilite">
   <meta name="geo.region" content="IN-TN" />
   <!-- <meta name="geo.placename" content="Hosur, Tamil Nadu, India" /> -->
@@ -32,7 +32,7 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="TechEdilite | Affordable Software Solutions Hosur" />
+  <meta name="twitter:title" content="TechEdilite | Affordable Software Solutions" />
   <meta name="twitter:description"
     content="Software development company in . BuildPulse & UnitPulse apps. Reliable & budget-friendly. +91 96777 45956" />
   <meta name="twitter:image" content="./favTE.png" />
@@ -64,8 +64,8 @@
    "alternateName": "Tech Edilite",
    "address": {
      "@type": "PostalAddress",
-     "addressLocality": "Hosur",
-     "addressRegion": "Tamil Nadu",
+     "addressLocality": "Bangalore",
+     "addressRegion": "Karnataka",
      "addressCountry": "India"
    },
    "contactPoint": {
@@ -91,8 +91,8 @@
  "email": "contact@techedilite.co",
  "address": {
    "@type": "PostalAddress",
-   "addressLocality": "Hosur",
-   "addressRegion": "Tamil Nadu",
+   "addressLocality": "Bangalore",
+   "addressRegion": "Karnataka",
    "addressCountry": "IN"
  },
  "geo": {
@@ -103,11 +103,11 @@
  "areaServed": [
    {
      "@type": "City",
-     "name": "Hosur"
+     "name": "Bangalore"
    },
    {
      "@type": "State",
-     "name": "Tamil Nadu"
+     "name": "Karnataka"
    },
    {
      "@type": "Country",
@@ -3927,7 +3927,7 @@
                 </svg>
               </div>
               <h3 class="text-xl font-semibold text-[#001c55] mb-2">Visit Us</h3>
-              <p class="text-gray-600">Hosur, Tamil Nadu</p>
+              <p class="text-gray-600">Bangalore, Karnataka</p>
             </div>
           </div>
 
@@ -4163,7 +4163,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
               </svg>
-              <span class="text-gray-600">Hosur, Tamil Nadu, India</span>
+              <span class="text-gray-600">Bangalore, Karnataka, India</span>
             </div>
             <div class="flex items-center mb-2">
               <svg class="w-5 h-5 text-purple-600 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
