--- a/index.html
+++ b/index.html
@@ -2231,7 +2231,7 @@
             </div>
             <div class="benefit-content">
               <h4>Global Experience</h4>
-              <p>Trusted by companies across multiple countries</p>
+              <p>Trusted by companies across multiple Domains</p>
             </div>
           </div>
 
@@ -2316,7 +2316,7 @@
                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-                <span>Clear communication in English</span>
+                <span>Efficient practices and systems</span>
               </div>
               <div class="feature-item">
                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -4471,7 +4471,9 @@
 
     <!-- Chat Module -->
     <!-- Chat Module -->
-    <div id="chatModule" class="fixed bottom-24 right-4 sm:right-6 z-50">
+    <!-- <div id="chatModule" class="fixed bottom-24 right-4 sm:right-6 z-50"> -->
+      <div id="chatModule" class="fixed bottom-24 right-4 sm:right-6 z-50" style="display: none;">
+
       <!-- Chat Toggle Button -->
       <button id="chatToggle"
         class="group relative overflow-hidden bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 hover:from-blue-700 hover:via-purple-700 hover:to-pink-700 text-white rounded-full p-4 shadow-xl transition-all duration-500 transform hover:scale-110 hover:rotate-6 focus:outline-none focus:ring-4 focus:ring-purple-300 animate-float">
