--- a/index.html
+++ b/index.html
@@ -2723,6 +2723,27 @@
             </div>
           </div>
 
+          
+  <div class="flex-shrink-0 w-80 bg-white border border-gray-200 rounded-lg shadow-sm hover:shadow-xl transition-all duration-300">
+            <div class="h-48 bg-gradient-to-br from-yellow-50 to-orange-50 flex items-center justify-center p-6">
+              <img src="./FT.png" alt="Fintrase" class="w-32 h-32 object-contain rounded-lg"
+                   onerror="this.onerror=null; this.src='https://placehold.co/200x200/fbbf24/000000?text=Star+School';">
+            </div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-900 mb-2">Fintrase</h3>
+              <p class="text-gray-600 text-sm leading-relaxed mb-4">
+                Super Efficient Saas product for car wash businesses.
+              </p>
+              <a href="/fintrase.html" target="_blank" 
+                 class="inline-flex items-center text-blue-600 hover:text-blue-700 font-medium text-sm">
+                Learn more
+                <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+
           <!-- Project 2: Star School -->
           <div class="flex-shrink-0 w-80 bg-white border border-gray-200 rounded-lg shadow-sm hover:shadow-xl transition-all duration-300">
             <div class="h-48 bg-gradient-to-br from-yellow-50 to-orange-50 flex items-center justify-center p-6">
